--- a/src/app/home/faas/faas-listing/faas-listing.component.html
+++ b/src/app/home/faas/faas-listing/faas-listing.component.html
@@ -1,3 +1,11 @@
+<div class="default-loader d-flex justify-content-center w-100 h-100" *ngIf="showLazyLoader">
+  <div class="align-self-center text-center">
+    <div class="spinner-border text-dark" role="status">
+      <span class="sr-only">Processing...</span>
+    </div>
+    <div class="text-secondary mt-2">Processing...</div>
+  </div>
+</div>
 <div class="faas-page d-flex flex-column w-100 bg-light-gray page-padding">
   <div class="d-flex justify-content-between align-items-center w-100 pt-2 pb-4">
     <div class="font-22">
@@ -26,7 +34,7 @@
         <div (click)="applySort('name')" class="hover d-flex align-items-center item-name">
           <span class="mr-2">Name</span>
           <span *ngIf="sortModel['name']==1" class="dsi dsi-drop-down"></span>
-            <span *ngIf="sortModel['name']==-1" class="dsi dsi-drop-up"></span>
+          <span *ngIf="sortModel['name']==-1" class="dsi dsi-drop-up"></span>
         </div>
         <div class="d-flex align-items-center">
           <div (click)="applySort('url')" class="hover d-flex align-items-center item-url">
