--- a/src/app/utils/structure-field-properties/text-property/text-property.component.html
+++ b/src/app/utils/structure-field-properties/text-property/text-property.component.html
@@ -106,7 +106,7 @@
       </div>
     </div>
   </div>
-  <div class="d-flex flex-column w-100 mb-4"
+  <div class="d-flex flex-column w-100 mb-4 overflow-auto" style="max-height: 30vh;"
     *ngIf="form.get('properties.enum') && form.get('properties._detailedType').value === 'enum'">
     <div class="" formArrayName="enum" [sortablejs]="enumList"
       [sortablejsOptions]="{sort: !!edit && !!edit.status, filter: '.disabled', onMove: sortableOnMove, onUpdate: sortableOnUpdate }">
