--- a/src/app/utils/format-type-badge/format-type-badge.component.html
+++ b/src/app/utils/format-type-badge/format-type-badge.component.html
@@ -1,5 +1,5 @@
 <div
-  class="data-format-type d-flex align-items-center justify-content-center font-13 font-weight-bold {{ formatType }} {{class}}"
+  class="data-format-type d-flex align-items-center font-13 font-weight-bold {{ formatType }} {{class}}"
   [class.data-format-type-sm]="small">
   {{ formatType }}
 </div>
