--- a/src/app/home/data-format-listing/data-format-listing.component.scss
+++ b/src/app/home/data-format-listing/data-format-listing.component.scss
@@ -32,6 +32,11 @@
   max-width: 100px;
 }
 
+.item-format-type {
+  min-width: 100px;
+  max-width: 100px;
+}
+
 .list-group-item {
   overflow: hidden;
 
