--- a/src/app/home/agents/agents.component.html
+++ b/src/app/home/agents/agents.component.html
@@ -160,8 +160,8 @@
         </div>
     </div>
     <div class="d-flex w-100 mt-auto">
-        <button type="button" class="btn btn-primary w-100" id="newAgentModalCreate"
-            [disabled]="agentName.invalid && (agentName.dirty || agentName.touched)"
+        <button *ngIf="showNewAgentWindow" type="button" class="btn btn-primary w-100" id="newAgentModalCreate"
+            [disabled]="!agentData.name"
             (click)="triggerAgentCreate()">{{agentData.isEdit ? 'Save' : 'Create'}}</button>
     </div>
 </div>
