--- a/src/app/home/b2b-flows/b2b-flows.component.html
+++ b/src/app/home/b2b-flows/b2b-flows.component.html
@@ -132,7 +132,7 @@
         <span class="font-22 fw-500">New Flow</span>
         <span class="dsi dsi-close hover" (click)="showNewFlowWindow=false;"></span>
     </div>
-    <div class="d-flex flex-column w-100">
+    <div *ngIf="showNewFlowWindow" class="d-flex flex-column w-100">
         <div class="d-flex flex-column w-100">
             <label for="name" class="font-13 text-secondary">
                 <span class="text">Name</span>
